--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -327,20 +327,19 @@ img
   margin-top 10vh
   .message
     background-color #931B32 
-    #header
+    .header_
       text-align center
       h2, p
         color #FFF
       h2
         padding-bottom 5px
-  #submit
+      .contact-sub
+        margin-top 0
+  .submit
     text-align center
+    .reply
+      background-color #F8B62D!important
 
-p#contact-sub
-  margin-top 0
-
-#reply
-  background-color #F8B62D!important
 
 #file
   margin 0 auto
