--- a/app/index.jade
+++ b/app/index.jade
@@ -195,32 +195,32 @@ html(lang="zh-tw")
       .container#page_3
         #contact
           .ui.attached.message
-            #header
+            .header_
               h2 聯絡我們
-              p#contact-sub 任何有需要改進的地方，或是任何意見，都歡迎告知我們 =]
+              p.contact-sub 任何有需要改進的地方，或是任何意見，都歡迎告知我們 =]
           form.ui.form.attached.fluid.segment
             .two.fields
               .ui.field.input
                 label 
                   h3(style="font-weight:bold") 姓名
-                input#name(placeholder="Name" type="text")
+                input.name(placeholder="Name" type="text")
               .ui.field.input
                 label 
                   h3(style="font-weight:bold") 系級 
-                input#department(placeholder="Department" type="text")
+                input.department(placeholder="Department" type="text")
             .ui.field.input
               label 
                 h3(style="font-weight:bold") 電子信箱
-              input#email(placeholder="E-mail address" type="text")
+              input.email(placeholder="E-mail address" type="text")
             .ui.field.input
               label 
                 h3(style="font-weight:bold") 想跟我說什麼？
-              textarea#comment(placeholder="Comment" style="height:auto")
-            #submit
+              textarea.comment(placeholder="Comment" style="height:auto")
+            .submit
               .ui.buttons
-                .ui.button#cancel Cancel
+                .ui.button.cancel Cancel
                 .or
-                .ui.button.positive#reply Reply
+                .ui.button.positive.reply Reply
         br      
 
       .container#page_4
@@ -235,8 +235,37 @@ html(lang="zh-tw")
 
         br
       
-      .container#page_5
-        h1 test
+      // .container#page_5
+      //   #t-shirt
+      //     .ui.attached.message
+      //       .header
+      //         h2 聯絡我們
+      //         p#contact-sub 任何有需要改進的地方，或是任何意見，都歡迎告知我們 =]
+      //     form.ui.form.attached.fluid.segment
+      //       .two.fields
+      //         .ui.field.input
+      //           label 
+      //             h3(style="font-weight:bold") 姓名
+      //           input#name(placeholder="Name" type="text")
+      //         .ui.field.input
+      //           label 
+      //             h3(style="font-weight:bold") 系級 
+      //           input#department(placeholder="Department" type="text")
+      //       .ui.field.input
+      //         label 
+      //           h3(style="font-weight:bold") 電子信箱
+      //         input#email(placeholder="E-mail address" type="text")
+      //       .ui.field.input
+      //         label 
+      //           h3(style="font-weight:bold") 想跟我說什麼？
+      //         textarea#comment(placeholder="Comment" style="height:auto")
+      //       .submit
+      //         .ui.buttons
+      //           .ui.button#cancel Cancel
+      //           .or
+      //           .ui.button.positive#reply Reply
+      //   br      
+
 
     //- #mask
 
