--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -321,7 +321,7 @@ img
   background-color rgba(0,0,0,0.4)
   opacity 0
 
-#contact
+#contact, #t-shirt
   width 90vw
   margin 0 auto
   margin-top 10vh
@@ -381,4 +381,4 @@ label h3
   
 
 
-// vi:et:nowrap:sw=2:ts=2
+// vi:et:nowrap:sw=3:ts=2
