--- a/app/index.jade
+++ b/app/index.jade
@@ -235,36 +235,36 @@ html(lang="zh-tw")
 
         br
       
-      // .container#page_5
-      //   #t-shirt
-      //     .ui.attached.message
-      //       .header
-      //         h2 聯絡我們
-      //         p#contact-sub 任何有需要改進的地方，或是任何意見，都歡迎告知我們 =]
-      //     form.ui.form.attached.fluid.segment
-      //       .two.fields
-      //         .ui.field.input
-      //           label 
-      //             h3(style="font-weight:bold") 姓名
-      //           input#name(placeholder="Name" type="text")
-      //         .ui.field.input
-      //           label 
-      //             h3(style="font-weight:bold") 系級 
-      //           input#department(placeholder="Department" type="text")
-      //       .ui.field.input
-      //         label 
-      //           h3(style="font-weight:bold") 電子信箱
-      //         input#email(placeholder="E-mail address" type="text")
-      //       .ui.field.input
-      //         label 
-      //           h3(style="font-weight:bold") 想跟我說什麼？
-      //         textarea#comment(placeholder="Comment" style="height:auto")
-      //       .submit
-      //         .ui.buttons
-      //           .ui.button#cancel Cancel
-      //           .or
-      //           .ui.button.positive#reply Reply
-      //   br      
+       .container#page_5
+         #t-shirt
+           .ui.attached.message
+             .header_
+               h2 畢業 T-shirt 預購
+               p.contact-sub 這裏要填什麼
+           form.ui.form.attached.fluid.segment
+             .two.fields
+               .ui.field.input
+                 label 
+                   h3(style="font-weight:bold") 姓名
+                 input.name(placeholder="Name" type="text")
+               .ui.field.input
+                 label 
+                   h3(style="font-weight:bold") 系級 
+                 input.department(placeholder="Department" type="text")
+             .ui.field.input
+               label 
+                 h3(style="font-weight:bold") 電子信箱
+               input.email(placeholder="E-mail address" type="text")
+             .ui.field.input
+               label 
+                 h3(style="font-weight:bold") 想跟我說什麼？
+               textarea.comment(placeholder="Comment" style="height:auto")
+             .submit
+               .ui.buttons
+                 .ui.button.cancel Cancel
+                 .or
+                 .ui.button.positive.reply Reply
+         br      
 
 
     //- #mask
