--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -71,6 +71,9 @@ html
   height 100%
   max-width 100vw 
 
+.container
+  min-height 100vh
+
 #page_1
   overflow-y visible
 
@@ -91,6 +94,7 @@ html
 #page_5
   left 400vw
   height auto
+  overflow-y visible
 
 .grid
   height auto
