done t-shirt fronted

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -95,6 +95,11 @@ html
   left 400vw
   height auto
   overflow-y visible
+  .t-shirts
+    h3
+      font-size 1.5em
+    h4
+      line-height 1.7em
 
 .grid
   height auto
