add t-shirt cancel buttom

--- a/app/index.jade
+++ b/app/index.jade
@@ -282,7 +282,7 @@ html(lang="zh-tw")
               .ui.buttons
                 .ui.button.cancel Cancel
                 .or
-                .ui.button.positive.reply Reply
+                .ui.button.positive.reply Send
         br      
 
 
