--- a/app/index.jade
+++ b/app/index.jade
@@ -269,7 +269,7 @@ html(lang="zh-tw")
                 h3(style="font-weight:bold") 訂購數量
               .ui.selection.dropdown
                 input(type="hidden" name="amount")
-                .text 0 
+                .default.text 0 
                 i.dropdown.icon
                 .menu
                   .item(data-value="1") 1
