--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -322,7 +322,7 @@ img
 #github
   right 5%
 
-#mask
+.mask
   position fixed
   z-index 100
   width 100vw
@@ -388,6 +388,10 @@ label h3
 .loading
   background transparent url(../res/images/loader-mini.gif) no-repeat 50% 50% !important
   
-
-
+.iframe
+  position absolute
+  padding-top 25vh
+  iframe
+    position relative
+  
 // vi:et:nowrap:sw=3:ts=2
