--- a/app/index.jade
+++ b/app/index.jade
@@ -236,6 +236,8 @@ html(lang="zh-tw")
         br
       
       .container#page_5
+        //.iframe.mask
+        //  iframe(src="cssslider.html" style="width:80vw;height:auto;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0")
         #t-shirt
           .ui.attached.message
             .header_
