remove page_5 icon temperary

--- a/app/index.jade
+++ b/app/index.jade
@@ -30,9 +30,9 @@ html(lang="zh-tw")
         a.item#icon_4
           i.file.text.icon
           | Download
-        a.item#icon_5
-          i.shop.text.icon
-          | T-shirt
+        // a.item#icon_5
+        //   i.shop.text.icon
+        //   | T-shirt
         .right.menu
           //- a.item#github(href="https://github.com/Mouther/NCKU-graduation104" target="_blank")
           //-   i.github.alternate.icon.large.link
