add total price

--- a/app/index.jade
+++ b/app/index.jade
@@ -280,6 +280,10 @@ html(lang="zh-tw")
                   .item(data-value="4") 4
                   .item(data-value="5") 5
             .t-shirts
+            .ui.divider
+            .price(style="position:relative;width:100%")
+              h2(style="margin-left:auto") 總計：NTD&nbsp;
+                a 0
             .submit
               .ui.buttons
                 .ui.button.cancel Cancel
