add model images

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -322,7 +322,7 @@ img
 #github
   right 5%
 
-.mask
+#mask, .mask
   position fixed
   z-index 100
   width 100vw
@@ -389,8 +389,7 @@ label h3
   background transparent url(../res/images/loader-mini.gif) no-repeat 50% 50% !important
   
 .iframe
-  position absolute
-  padding-top 25vh
+  padding-top 10vh
   iframe
     position relative
   
