--- a/app/index.jade
+++ b/app/index.jade
@@ -268,6 +268,10 @@ html(lang="zh-tw")
                 input.phone(placeholder="Phone number" type="text")
             .ui.field.input
               label 
+                h3(style="font-weight:bold") 備註
+              textarea.remark(placeholder="Remark" style="height:auto")
+            .ui.field.input
+              label 
                 h3(style="font-weight:bold") 訂購數量
               .ui.selection.dropdown
                 input(type="hidden" name="amount")
