--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -338,7 +338,10 @@ img
     background-color #931B32 
     .header_
       text-align center
-      h2, p
+      a
+        font-size 1.5em
+        color yellow
+      h2, p, h3
         color #FFF
       h2
         padding-bottom 5px
