--- a/app/index.jade
+++ b/app/index.jade
@@ -242,7 +242,11 @@ html(lang="zh-tw")
           .ui.attached.message
             .header_
               h2 畢業 T-shirt 預購
-              p.contact-sub 這裏要填什麼
+              p.contact-sub 
+                h3
+                  a(href='res/images/boy-size.jpg' target='_blank') 男生尺寸表
+                  | &nbsp; &nbsp;
+                  a(href='res/images/girl-size.jpg' target='_blank') 女生尺寸表
           form.ui.form.attached.fluid.segment
             .three.fields
               .ui.field.input
