add t-shirt information

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -338,10 +338,11 @@ img
     background-color #931B32 
     .header_
       text-align center
-      a
-        font-size 1.5em
-        color yellow
-      h2, p, h3
+      h3
+        a
+          font-size 1.5em
+          color #F8B62D
+      h2, p, h3, h4
         color #FFF
       h2
         padding-bottom 5px
