--- a/app/index.jade
+++ b/app/index.jade
@@ -242,7 +242,13 @@ html(lang="zh-tw")
           .ui.attached.message
             .header_
               h2 畢業 T-shirt 預購
-              p.contact-sub 
+              p.contact-sub
+                此為第一階段預購，５／１，１２：００～５／３，２３：５９
+                br
+                僅開放給『<a style='color:yellow'>應屆畢業生</a>』預購，若學號三四碼不是００或０２的同學，請在備註欄說明
+                br
+                每個學號『<a style='color:yellow'>限預購五件</a>』且『<a style='color:yellow'>僅能成功地填寫一次表單</a>』，請各位同學注意
+                br
                 h3
                   a(href='res/images/boy-size.jpg' target='_blank') 男生尺寸表
                   | &nbsp; &nbsp;
