--- a/app/index.jade
+++ b/app/index.jade
@@ -243,9 +243,9 @@ html(lang="zh-tw")
             .header_
               h2 畢業 T-shirt 預購
               p.contact-sub
-                此為第一階段預購，５／１，１２：００～５／３，２３：５９
+                此為第二階段預購，５／４，１２：００～５／７，２３：５９
                 br
-                僅開放給『<a style='color:yellow'>應屆畢業生</a>』預購，若學號三四碼不是００或０２的同學，請在備註欄說明
+                此階段開放給全校同學預購，同樣享有預購價一件３９９元！
                 br
                 每個學號『<a style='color:yellow'>限預購五件</a>』且『<a style='color:yellow'>僅能成功地填寫一次表單</a>』，請各位同學注意
                 br
