add graduation icon & href

--- a/app/index.jade
+++ b/app/index.jade
@@ -33,6 +33,9 @@ html(lang="zh-tw")
         a.item#icon_5
           i.shop.text.icon
           | T-shirt
+        a.item#icon_6(href='http://stud.adm.ncku.edu.tw/mil/ncku_graduation/104/' target='_blank')
+          i.student.text.icon
+          | Graduation
         .right.menu
           //- a.item#github(href="https://github.com/Mouther/NCKU-graduation104" target="_blank")
           //-   i.github.alternate.icon.large.link
