--- a/app/index.jade
+++ b/app/index.jade
@@ -35,7 +35,7 @@ html(lang="zh-tw")
           | T-shirt
         a.item#icon_6(href='http://stud.adm.ncku.edu.tw/mil/ncku_graduation/104/' target='_blank')
           i.student.text.icon
-          | Graduation
+          | Commencement 
         .right.menu
           //- a.item#github(href="https://github.com/Mouther/NCKU-graduation104" target="_blank")
           //-   i.github.alternate.icon.large.link
